--- a/index.html
+++ b/index.html
@@ -421,11 +421,10 @@
                             <div
                                 class="flex items-center p-2 transition-colors duration-200 group hover:bg-deep-purple-accent-400 hover:border-deep-purple-accent-400">
                                 <div class="mr-2">
-                                    <svg class="w-5 h-5 transition-colors duration-200 text-deep-purple-accent-400"
-                                        viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg">
-                                        <path
-                                            d="M17 6V4H6v2h3.5c1.302 0 2.401.838 2.815 2H6v2h6.315A2.994 2.994 0 0 1 9.5 12H6v2.414L11.586 20h2.828l-6-6H9.5a5.007 5.007 0 0 0 4.898-4H17V8h-2.602a4.933 4.933 0 0 0-.924-2H17z">
-                                        </path>
+                                    <svg class="w-6 h-6 transition-colors duration-200 text-deep-purple-accent-400"
+                                        stroke="currentColor" viewBox="0 0 52 52" xmlns="https://www.w3.org/2000/svg">
+                                        <polygon points="29 13 14 29 25 29 23 39 38 23 27 23" fill="none"
+                                            stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></polygon>
                                     </svg>
                                 </div>
                                 <span class="text-base text-gray-800 transition-colors duration-200">Costly
@@ -434,33 +433,10 @@
                             <div
                                 class="flex items-center p-2 transition-colors duration-200 group hover:bg-deep-purple-accent-400 hover:border-deep-purple-accent-400">
                                 <div class="mr-2">
-                                    <svg class="w-5 h-5 transition-colors duration-200 text-deep-purple-accent-400"
-                                        enable-background="new 0 0 465.2 465.2" version="1.1" viewBox="0 0 465.2 465.2"
-                                        xml:space="preserve" xmlns="https://www.w3.org/2000/svg">
-                                        <path
-                                            d="m279.59 423.71c-3.836 0.956-7.747 1.805-11.629 2.52-10.148 1.887-16.857 11.647-14.98 21.804 0.927 4.997 3.765 9.159 7.618 11.876 3.971 2.795 9.025 4.057 14.175 3.099 4.623-0.858 9.282-1.867 13.854-3.008 10.021-2.494 16.126-12.646 13.626-22.662-2.494-10.025-12.637-16.125-22.664-13.629z">
-                                        </path>
-                                        <path
-                                            d="m417.89 173.05c1.31 3.948 3.811 7.171 6.97 9.398 4.684 3.299 10.813 4.409 16.662 2.475 9.806-3.256 15.119-13.83 11.875-23.631-1.478-4.468-3.118-8.95-4.865-13.314-3.836-9.59-14.714-14.259-24.309-10.423-9.585 3.834-14.256 14.715-10.417 24.308 1.468 3.668 2.843 7.433 4.084 11.187z">
-                                        </path>
-                                        <path
-                                            d="m340.36 397.01c-3.299 2.178-6.704 4.286-10.134 6.261-8.949 5.162-12.014 16.601-6.854 25.546 1.401 2.433 3.267 4.422 5.416 5.942 5.769 4.059 13.604 4.667 20.127 0.909 4.078-2.352 8.133-4.854 12.062-7.452 8.614-5.691 10.985-17.294 5.291-25.912-5.693-8.621-17.291-10.989-25.908-5.294z">
-                                        </path>
-                                        <path
-                                            d="m465.02 225.28c-0.407-10.322-9.101-18.356-19.426-17.953-10.312 0.407-18.352 9.104-17.947 19.422 0.155 3.945 0.195 7.949 0.104 11.89-0.145 6.473 3.021 12.243 7.941 15.711 2.931 2.064 6.488 3.313 10.345 3.401 10.322 0.229 18.876-7.958 19.105-18.285 0.103-4.709 0.064-9.48-0.122-14.186z">
-                                        </path>
-                                        <path
-                                            d="m414.84 347.82c-8.277-6.21-19.987-4.524-26.186 3.738-2.374 3.164-4.874 6.289-7.434 9.298-6.69 7.86-5.745 19.666 2.115 26.361 0.448 0.38 0.901 0.729 1.371 1.057 7.814 5.509 18.674 4.243 24.992-3.171 3.057-3.59 6.037-7.323 8.874-11.102 6.2-8.262 4.522-19.98-3.732-26.181z">
-                                        </path>
-                                        <path
-                                            d="m442.32 280.21c-9.855-3.09-20.35 2.396-23.438 12.251-1.182 3.765-2.492 7.548-3.906 11.253-3.105 8.156-0.13 17.13 6.69 21.939 1.251 0.879 2.629 1.624 4.126 2.19 9.649 3.682 20.454-1.159 24.132-10.812 1.679-4.405 3.237-8.906 4.646-13.382 3.085-9.857-2.397-20.349-12.25-23.439z">
-                                        </path>
-                                        <path
-                                            d="m198 426.4c-16.72-3.002-32.759-8.114-47.968-15.244-0.18-0.094-0.341-0.201-0.53-0.287-3.584-1.687-7.162-3.494-10.63-5.382-0.012-0.014-0.034-0.023-0.053-0.031-6.363-3.504-12.573-7.381-18.606-11.628-87.972-61.97-109.12-183.96-47.15-271.93 13.476-19.122 29.784-35.075 47.965-47.719 0.224-0.156 0.448-0.311 0.67-0.468 64.067-44.144 151.06-47.119 219.09-1.757l-14.611 21.111c-4.062 5.876-1.563 10.158 5.548 9.518l63.467-5.682c7.12-0.64 11.378-6.799 9.463-13.675l-17.043-61.406c-1.908-6.884-6.793-7.708-10.859-1.833l-14.645 21.161c-49.924-33.513-109.8-46.292-169.24-35.986-5.986 1.036-11.888 2.304-17.709 3.78-0.045 8e-3 -0.081 0.013-0.117 0.021-0.225 0.055-0.453 0.128-0.672 0.189-51.25 13.161-95.965 43.052-127.87 85.7-0.269 0.319-0.546 0.631-0.8 0.978-1.061 1.429-2.114 2.891-3.145 4.353-1.686 2.396-3.348 4.852-4.938 7.308-0.199 0.296-0.351 0.597-0.525 0.896-26.33 40.801-39.03 87.971-36.852 135.99 5e-3 0.158-4e-3 0.317 0 0.479 0.211 4.691 0.583 9.447 1.088 14.129 0.027 0.302 0.094 0.588 0.145 0.89 0.522 4.708 1.177 9.427 1.998 14.145 8.344 48.138 31.052 91.455 65.079 125.16 0.079 0.079 0.161 0.165 0.241 0.247 0.028 0.031 0.059 0.047 0.086 0.076 9.142 9.017 19.086 17.357 29.793 24.898 28.02 19.744 59.221 32.795 92.729 38.808 10.167 1.827 19.879-4.941 21.703-15.103 1.823-10.169-4.939-19.889-15.103-21.71z">
-                                        </path>
-                                        <path
-                                            d="m221.12 83.198c-8.363 0-15.137 6.78-15.137 15.131v150.75l137.87 71.271c2.219 1.149 4.595 1.69 6.933 1.69 5.476 0 10.765-2.982 13.454-8.185 3.835-7.426 0.933-16.549-6.493-20.384l-121.51-62.818v-132.32c-1e-3 -8.351-6.767-15.131-15.12-15.131z">
-                                        </path>
+                                    <svg class="w-6 h-6 transition-colors duration-200 text-deep-purple-accent-400"
+                                        stroke="currentColor" viewBox="0 0 52 52" xmlns="https://www.w3.org/2000/svg">
+                                        <polygon points="29 13 14 29 25 29 23 39 38 23 27 23" fill="none"
+                                            stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></polygon>
                                     </svg>
                                 </div>
                                 <span class="text-base text-gray-800 transition-colors duration-200 ">Waste
@@ -469,16 +445,10 @@
                             <div
                                 class="flex items-center p-2 transition-colors duration-200 group hover:bg-deep-purple-accent-400 hover:border-deep-purple-accent-400">
                                 <div class="mr-2">
-                                    <svg class="w-5 h-5 transition-colors duration-200 text-deep-purple-accent-400"
-                                        enable-background="new 0 0 214.143 214.143" version="1.1"
-                                        viewBox="0 0 214.14 214.14" xml:space="preserve"
-                                        xmlns="https://www.w3.org/2000/svg">
-                                        <path
-                                            d="m196.81 19.171-88.889-19.08c-0.56-0.122-1.136-0.122-1.697 0l-88.889 19.08c-1.863 0.398-3.192 2.046-3.192 3.949v48.481c0 50.324 35.756 111.22 79.703 135.74l11.257 6.284c0.612 0.341 1.29 0.513 1.969 0.513s1.357-0.172 1.969-0.513l11.257-6.284c43.947-24.523 79.703-85.421 79.703-135.74v-48.481c1e-3 -1.904-1.329-3.55-3.191-3.949zm-4.888 52.43h-1e-3c0 47.707-33.897 105.44-75.56 128.69l-9.288 5.185-9.288-5.185c-41.663-23.252-75.56-80.981-75.56-128.69v-45.216l84.849-18.211 84.848 18.211v45.216z">
-                                        </path>
-                                        <path
-                                            d="m89.781 68.182c-7.501 0-15.629 4.419-20.711 11.259-4.301 5.794-5.69 12.242-3.902 18.152 0.989 3.28 3.931 7.357 7.768 11.637l-19.226 19.228c-1.578 1.578-1.578 4.135 0 5.714 0.789 0.789 1.823 1.184 2.857 1.184s2.067-0.395 2.857-1.184l19.122-19.122c10.035 9.775 22.482 19.304 26.1 22.02l2.427 1.819 2.427-1.819c5.95-4.467 35.823-27.358 39.477-39.473 1.45-4.795 0.775-9.935-1.812-14.801l21.352-21.351c1.578-1.578 1.578-4.135 0-5.714s-4.135-1.578-5.714 0l-20.531 20.531c-4.996-4.981-11.657-8.079-17.908-8.079-6.541 0-12.712 2.559-17.293 7.021-4.581-4.463-10.752-7.022-17.29-7.022zm34.579 8.08c4.957 1e-3 10.671 3.215 14.222 7.997 1.59 2.139 4.044 6.41 2.659 11.002-2.103 6.972-21.129 23.465-34.17 33.499-13.04-10.032-32.063-26.523-34.17-33.499v-1e-3c-1.385-4.591 1.069-8.862 2.659-11.001 3.551-4.782 9.265-7.996 14.22-7.996 5.607 0 10.815 2.794 13.924 7.471l3.366 5.059 3.366-5.059c3.109-4.679 8.318-7.472 13.924-7.472z">
-                                        </path>
+                                    <svg class="w-6 h-6 transition-colors duration-200 text-deep-purple-accent-400"
+                                        stroke="currentColor" viewBox="0 0 52 52" xmlns="https://www.w3.org/2000/svg">
+                                        <polygon points="29 13 14 29 25 29 23 39 38 23 27 23" fill="none"
+                                            stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></polygon>
                                     </svg>
                                 </div>
                                 <span class="text-base text-gray-800 transition-colors duration-200 ">Privacy
@@ -487,11 +457,10 @@
                             <div
                                 class="flex items-center p-2 transition-colors duration-200 group hover:bg-deep-purple-accent-400 hover:border-deep-purple-accent-400">
                                 <div class="mr-2">
-                                    <svg class="w-5 h-5 transition-colors duration-200 text-deep-purple-accent-400"
-                                        fill="currentColor" viewBox="0 0 16 16" xmlns="https://www.w3.org/2000/svg">
-                                        <path
-                                            d="M3.5 2h-1v5h1V2zm6.1 5H6.4L6 6.45v-1L6.4 5h3.2l.4.5v1l-.4.5zm-5 3H1.4L1 9.5v-1l.4-.5h3.2l.4.5v1l-.4.5zm3.9-8h-1v2h1V2zm-1 6h1v6h-1V8zm-4 3h-1v3h1v-3zm7.9 0h3.19l.4-.5v-.95l-.4-.5H11.4l-.4.5v.95l.4.5zm2.1-9h-1v6h1V2zm-1 10h1v2h-1v-2z"
-                                            clip-rule="evenodd" fill-rule="evenodd"></path>
+                                    <svg class="w-6 h-6 transition-colors duration-200 text-deep-purple-accent-400"
+                                        stroke="currentColor" viewBox="0 0 52 52" xmlns="https://www.w3.org/2000/svg">
+                                        <polygon points="29 13 14 29 25 29 23 39 38 23 27 23" fill="none"
+                                            stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></polygon>
                                     </svg>
                                 </div>
                                 <span class="text-base text-gray-800 transition-colors duration-200 ">Useless
@@ -500,22 +469,10 @@
                             <div
                                 class="flex items-center p-2 transition-colors duration-200 group hover:bg-deep-purple-accent-400 hover:border-deep-purple-accent-400">
                                 <div class="mr-2">
-                                    <svg class="w-5 h-5 transition-colors duration-200 text-deep-purple-accent-400"
-                                        enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32"
-                                        xml:space="preserve" xmlns="https://www.w3.org/2000/svg">
-                                        <style type="text/css">
-                                            .st0 {
-                                                fill: none;
-                                                stroke: #000000;
-                                                stroke-width: 2;
-                                                stroke-linecap: round;
-                                                stroke-linejoin: round;
-                                                stroke-miterlimit: 10;
-                                            }
-                                        </style>
-                                        <path
-                                            d="m27 4h-22c-1.7 0-3 1.3-3 3v18c0 1.7 1.3 3 3 3h22c1.7 0 3-1.3 3-3v-18c0-1.7-1.3-3-3-3zm-17.9 3.6c0.1-0.1 0.1-0.2 0.2-0.3s0.2-0.2 0.3-0.2c0.4-0.2 0.8-0.1 1.1 0.2 0.1 0.1 0.2 0.2 0.2 0.3 0.1 0.1 0.1 0.3 0.1 0.4 0 0.3-0.1 0.5-0.3 0.7s-0.4 0.3-0.7 0.3-0.5-0.1-0.7-0.3-0.3-0.4-0.3-0.7c0-0.1 0-0.3 0.1-0.4zm-3.1 0.4c0-0.3 0.1-0.5 0.3-0.7l0.1-0.1c0.1 0 0.1-0.1 0.2-0.1 0.1-0.1 0.1-0.1 0.2-0.1h0.4c0.1 0 0.1 0 0.2 0.1 0.1 0 0.1 0.1 0.2 0.1l0.1 0.1c0.1 0.1 0.2 0.2 0.2 0.3 0.1 0.1 0.1 0.3 0.1 0.4s0 0.3-0.1 0.4c0 0.1-0.1 0.2-0.2 0.3-0.2 0.2-0.4 0.3-0.7 0.3s-0.5-0.1-0.7-0.3-0.3-0.4-0.3-0.7zm5.7 13.3c0.4 0.4 0.4 1 0 1.4-0.2 0.2-0.4 0.3-0.7 0.3s-0.5-0.1-0.7-0.3l-3-3c-0.4-0.4-0.4-1 0-1.4l3-3c0.4-0.4 1-0.4 1.4 0s0.4 1 0 1.4l-2.3 2.3 2.3 2.3zm0.9-12.4c-0.1-0.1-0.2-0.1-0.3-0.2s-0.2-0.2-0.2-0.3c-0.1-0.1-0.1-0.3-0.1-0.4s0-0.3 0.1-0.4 0.1-0.2 0.2-0.3c0.4-0.4 1-0.4 1.4 0 0.1 0.1 0.2 0.2 0.2 0.3 0.1 0.1 0.1 0.3 0.1 0.4s0 0.3-0.1 0.4-0.1 0.2-0.2 0.3c-0.2 0.2-0.4 0.3-0.7 0.3-0.1 0-0.3 0-0.4-0.1zm6.3 6.5-4 8c-0.2 0.4-0.5 0.6-0.9 0.6-0.2 0-0.3 0-0.4-0.1-0.5-0.2-0.7-0.8-0.4-1.3l4-8c0.2-0.5 0.8-0.7 1.3-0.4 0.4 0.2 0.6 0.8 0.4 1.2zm5.8 4.3-3 3c-0.2 0.2-0.4 0.3-0.7 0.3s-0.5-0.1-0.7-0.3c-0.4-0.4-0.4-1 0-1.4l2.3-2.3-2.3-2.3c-0.4-0.4-0.4-1 0-1.4s1-0.4 1.4 0l3 3c0.4 0.4 0.4 1 0 1.4z">
-                                        </path>
+                                    <svg class="w-6 h-6 transition-colors duration-200 text-deep-purple-accent-400"
+                                        stroke="currentColor" viewBox="0 0 52 52" xmlns="https://www.w3.org/2000/svg">
+                                        <polygon points="29 13 14 29 25 29 23 39 38 23 27 23" fill="none"
+                                            stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></polygon>
                                     </svg>
                                 </div>
                                 <span class="text-base text-gray-800 transition-colors duration-200 ">Algorithms
@@ -535,11 +492,12 @@
                             </div>
                         </div>
                         <div
-                            class="flex transition duration-300 transform border rounded shadow-sm hover:scale-105 group hover:shadow-xl">
+                            class="flex flex-col items-center justify-center transition duration-300 transform border rounded shadow-sm hover:scale-105 group hover:shadow-xl">
                             <!-- Sliding Text animation -->
                             <div
                                 class="relative inline-flex items-center justify-center flex-wrap text-center font-extrabold text-3xl md:text-4xl text-slate-600">
-                                Live Rishtey Provides <span
+                                Live Rishtey Provides
+                                <span
                                     class="text-indigo-500 inline-flex flex-col h-[calc(theme(fontSize.3xl)*theme(lineHeight.tight))] md:h-[calc(theme(fontSize.4xl)*theme(lineHeight.tight))] overflow-hidden">
                                     <ul class="block animate-text-slide-5 text-left leading-tight [&_li]:block">
                                         <li>Reasonable Cost!</li>
@@ -549,7 +507,8 @@
                                         <li>Fresh Profiles</li>
                                         <li aria-hidden="true">100% Live Work</li>
                                     </ul>
-                                </span></div>
+                                </span>
+                            </div>
                             <!-- End: Sliding Text animation -->
                         </div>
                     </div>
@@ -760,9 +719,7 @@
                                         material.
                                     </p>
                                     <div class="flex flex-col-reverse justify-between pt-5 pb-10 border-t lg:flex-row">
-                                        <p>LiveRishtey © Copyright 2023 - Five39 Matrimonial and Matchmaking Pvt Ltd.
-                                            All
-                                            Rights Reserved.</p>
+
                                         <ul
                                             class="flex flex-col mb-3 space-y-2 lg:mb-0 sm:space-y-0 sm:space-x-5 sm:flex-row">
                                             <li>
