--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </head>
 
     <body>
-        <main id="app" class="relative flex flex-col min-h-screen bg-white dark:bg-gray-950 font-roboto" data-v-app="">
+        <main id="app" class="relative flex flex-col min-h-screen bg-white font-roboto" data-v-app="">
             <header class="absolute inset-x-0 top-0 z-40 w-full">
                 <nav class="container relative flex items-center justify-between px-4 py-6 mx-auto sm:px-6"
                     aria-label="Global">
@@ -241,13 +241,13 @@
             </header>
             <div class="flex flex-col flex-1">
                 <section
-                    class="relative before:scale-y-110 before:absolute before:mx-auto before:inset-x-0 before:-bottom-px before:bg-gradient-to-r before:from-transparent before:via-gray-950/10 dark:before:via-white/20 before:to-transparent before:h-px">
-                    <div class="relative overflow-hidden pt-28 sm:pt-32 bg-gray-50 dark:bg-gray-950">
+                    class="relative before:scale-y-110 before:absolute before:mx-auto before:inset-x-0 before:-bottom-px before:bg-gradient-to-r before:from-transparent before:via-gray-950/10 ">
+                    <div class="relative overflow-hidden pt-28 sm:pt-32 bg-gray-50">
                         <div aria-hidden="true"
-                            class="absolute inset-x-0 bottom-0 z-10 h-20 bg-gradient-to-b from-transparent to-gray-50 dark:to-gray-950">
+                            class="absolute inset-x-0 bottom-0 z-10 h-20 bg-gradient-to-b from-transparent to-gray-50">
                         </div>
                         <div class="absolute inset-x-0 -top-20"><svg
-                                class="min-w-[80rem] -translate-x-60 md:translate-x-0 mx-auto w-full -scale-y-100 contrast-150 opacity-50 dark:opacity-25"
+                                class="min-w-[80rem] -translate-x-60 md:translate-x-0 mx-auto w-full -scale-y-100 contrast-150 opacity-50"
                                 viewBox="0 0 1440 900" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_1739_2)">
                                     <g filter="url(#filter0_f_1739_2)">
@@ -310,25 +310,24 @@
                                 <div class="relative mx-auto overflow-hidden rounded-full h-max w-max">
                                     <div class="absolute inset-0 w-4 h-16 animate-slide">
                                         <div aria-hidden="true"
-                                            class="absolute inset-0 rotate-[-20deg] scale-y-125 bg-gradient-to-r from-transparent via-white/30 dark:via-white/10">
+                                            class="absolute inset-0 rotate-[-20deg] scale-y-125 bg-gradient-to-r from-transparent via-white/30">
                                         </div>
                                     </div>
                                     <div
-                                        class="border relative border-blue-200 border-whit/50 inline-flex items-center p-0.5 pl-2.5 rounded-full gap-x-2 border-white/40 dark:border-white/30 bg-gray-950/20 dark:bg-white/10 before:scale-y-110 before:absolute before:inset-x-4 before:-bottom-px before:bg-gradient-to-r before:from-transparent before:via-yellow-50 before:to-transparent before:h-px before:w-3/5">
+                                        class="border relative border-blue-200 border-whit/50 inline-flex items-center p-0.5 pl-2.5 rounded-full gap-x-2 border-white/40  bg-gray-950/20 before:scale-y-110 before:absolute before:inset-x-4 before:-bottom-px before:bg-gradient-to-r before:from-transparent before:via-yellow-50 before:to-transparent before:h-px before:w-3/5">
                                         <span class="text-sm tracking-wide text-white">Introducing</span><span
-                                            class="px-2 py-0.5 text-white text-xs font-semibold leading-5 uppercase tracking-wide bg-gray-950/20 dark:bg-white/20 border border-white/30 rounded-full">Matrimonial
+                                            class="px-2 py-0.5 text-white text-xs font-semibold leading-5 uppercase tracking-wide bg-gray-950/20 border border-white/30 rounded-full">Matrimonial
                                             Seach Engine</span>
                                     </div>
                                 </div>
-                                <h1
-                                    class="mt-8 text-3xl font-bold sm:text-4xl text-blue-950 dark:text-white lg:text-5xl xl:text-6xl">
+                                <h1 class="mt-8 text-3xl font-bold sm:text-4xl text-blue-950 lg:text-5xl xl:text-6xl">
                                     When searching is easy, <span class="text-red-600">marriage is easy!</span></h1>
-                                <p class="mt-5 text-gray-700 lg:mt-8 sm:text-lg dark:text-gray-200">Just check out our
+                                <p class="mt-5 text-gray-700 lg:mt-8 sm:text-lg">Just check out our
                                     LiveRishtey Live Premier once.
                                 </p>
                                 <div class="items-center my-6 gap-x-4 lg:gap-x-6 sm:flex sm: sm:justify-center lg:mt-8">
                                     <a href="https://chat.whatsapp.com/HuZZnXHiyAgKasTqRHOTSY"
-                                        class="relative inline-block w-80 mx-auto p-3 rounded-lg sm:w-auto group h-11 bg-gradient-to-r from-purple-600 to-sky-500 dark:from-purple-600 dark:to-blue-400 before:absolute before:inset-0 before:bg-gradient-to-r before:from-purple-400 before:to-sky-400 dark:before:from-purple-600 dark:before:to-sky-500 before:scale-75 before:opacity-50 before:rounded-md before:blur-lg before:transition before:duration-300 active:before:scale-90 focus:before:scale-90 focus:before:opacity-75 hover:before:scale-100 hover:before:opacity-100">
+                                        class="relative inline-block w-80 mx-auto p-3 rounded-lg sm:w-auto group h-11 bg-gradient-to-r from-purple-600 to-sky-500 before:absolute before:inset-0 before:bg-gradient-to-r before:from-purple-400 before:to-sky-400 before:scale-75 before:opacity-50 before:rounded-md before:blur-lg before:transition before:duration-300 active:before:scale-90 focus:before:scale-90 focus:before:opacity-75 hover:before:scale-100 hover:before:opacity-100">
                                         <p
                                             class="relative flex justify-center h-full text-sm font-medium items-center text-white tracking-wide  px-[calc(1.5rem-1px)] rounded-[calc(0.5rem-1px)] transition duration-300">
                                             Join our Community </p>
@@ -739,7 +738,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <p class="text-sm text-center text-gray-500 dark:text-gray-300">© 2020 - 2024
+                                    <p class="text-sm text-center text-gray-500">© 2020 - 2024
                                         LiveRishtey. Made
                                         with ❤️ for People.</p>
                                 </div>
