--- a/index.html
+++ b/index.html
@@ -346,6 +346,26 @@
                                         </p>
                                     </a>
                                 </div>
+                                 <div class="items-center my-6 gap-x-4 lg:gap-x-6 sm:flex sm: sm:justify-center lg:mt-8">
+
+                                    <a target="_blank" class="relative inline-block w-80 mx-auto p-3 rounded sm:w-auto group h-11 bg-gradient-to-r from-purple-600 to-sky-500 before:absolute before:inset-0 before:bg-gradient-to-r before:from-purple-400 before:to-sky-400 before:scale-75 before:opacity-50 before:rounded-md before:blur-lg before:transition before:duration-300 active:before:scale-90 focus:before:scale-90 focus:before:opacity-75 hover:before:scale-100 hover:before:opacity-100" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=NGNybTQzYWl2bWk2bDJjdGxkaTFrcm5idXRfMjAyNDA0MTNUMTEzMDAwWiBlYXN5bWF0cmltb25hQG0&amp;tmsrc=easymatrimona%40gmail.com&amp;scp=ALL"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif">
+                                        <p
+                                            class="relative flex justify-center h-full text-sm font-medium items-center text-white tracking-wide  px-[calc(1.5rem-1px)] rounded-[calc(0.5rem-1px)] transition duration-300">
+                                            <span class="mr-3"><svg class="w-6 h-6"
+                                                    enable-background="new 0 0 455.731 455.731" fill="none"
+                                                    stroke="currentColor" version="1.1" viewBox="0 0 455.73 455.73"
+                                                    xml:space="preserve" xmlns="https://www.w3.org/2000/svg">
+                                                    <g fill="#fff">
+                                                        <path
+                                                            d="m68.494 387.41 22.323-79.284c-14.355-24.387-21.913-52.134-21.913-80.638 0-87.765 71.402-159.17 159.17-159.17s159.17 71.402 159.17 159.17-71.401 159.17-159.17 159.17c-27.347 0-54.125-7-77.814-20.292l-81.763 21.047zm85.943-50.004 4.872 2.975c20.654 12.609 44.432 19.274 68.762 19.274 72.877 0 132.17-59.29 132.17-132.17s-59.289-132.17-132.17-132.17-132.17 59.29-132.17 132.17c0 25.393 7.217 50.052 20.869 71.311l3.281 5.109-12.855 45.658 47.238-12.16z" />
+                                                        <path
+                                                            d="m183.36 153.41-10.328-0.563c-3.244-0.177-6.426 0.907-8.878 3.037-5.007 4.348-13.013 12.754-15.472 23.708-3.667 16.333 2 36.333 16.667 56.333s42 52 90.333 65.667c15.575 4.404 27.827 1.435 37.28-4.612 7.487-4.789 12.648-12.476 14.508-21.166l1.649-7.702c0.524-2.448-0.719-4.932-2.993-5.98l-34.905-16.089c-2.266-1.044-4.953-0.384-6.477 1.591l-13.703 17.764c-1.035 1.342-2.807 1.874-4.407 1.312-9.384-3.298-40.818-16.463-58.066-49.687-0.748-1.441-0.562-3.19 0.499-4.419l13.096-15.15c1.338-1.547 1.676-3.722 0.872-5.602l-15.046-35.201c-0.801-1.874-2.596-3.13-4.629-3.241z" />
+                                                    </g>
+                                                </svg></span>
+                                            Join our Community
+                                        </p>
+                                    </a>
+                                </div>
 
                                 <div class="relative mb-6" style="padding-top: 56.25%">
                                     <iframe class="absolute inset-0 w-full aspect-video"
