--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
                                         </p>
                                     </a>
                                 </div>
+                                <style>.addToCalendar {background-color:#44c767;border-radius:28px;border:1px solid #18ab29;display:inline-block;cursor:pointer;color:#ffffff;font-family:Arial;font-size:16px;padding:16px 31px;text-decoration:none;text-shadow:0px 1px 0px #2f6627;}.addToCalendar:hover {background-color:#5cbf2a;}.addToCalendar:active {position:relative;top:1px;}</style><a href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20240414T113000Z%2F20240414T123000Z&details=Fastest%20Search%20for%20Marriage%20Profiles.%0AWatch%20our%20Live%20Rishtey%20Premiere%20Show.%0A%0AEvent%20Place%20%3A%20YouTube%20Channel%0Ahttps%3A%2F%2Fwww.youtube.com%2F%40easymatri%2Fstreams%0A%0AOne%20Stop%20to%20get%20Matched.%F0%9F%98%8E%0AFor%20Registration%20Please%20Contact%20us%3A%0A%2B91%209429692526&location=https%3A%2F%2Fwww.youtube.com%2F%40easymatri%2Fstreams&text=Live%20Rishtey%20Premiere%20Show" class="addToCalendar">Add to Calendar</a>
 
                                 <div class="relative mb-6" style="padding-top: 56.25%">
                                     <iframe class="absolute inset-0 w-full aspect-video"
