--- a/index.html
+++ b/index.html
@@ -230,12 +230,11 @@
     downloadLink.click();
 }
 
+document.getElementById("createEventButton").addEventListener("click", createCalendarEvent);
+
 // Call the function to create the calendar event
 createCalendarEvent();
 
-        function createCalendarEvent() {
-            // JavaScript function code here...
-        }
     </script>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@700&display=swap');
