--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <link rel="stylesheet" href="./app-92cb0ebe.css">
         <link rel="stylesheet" href="./app-e003ed48.css">
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/add-to-calendar-button@2" async defer></script>
 
         <script>
             tailwind.config = {
@@ -218,8 +219,7 @@
         }
     }
     </script>
-        <script src="https://cdn.jsdelivr.net/npm/add-to-calendar-button@2/dist/atc.min.js"></script>
-         <script>
+    <script>
         function createCalendarEvent() {
             // Define event details
             const eventName = "Hey are you looking for Matrimonial Profiles/ Rishtey?";
