--- a/i/index.html
+++ b/i/index.html
@@ -13,7 +13,8 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <script src="/mian.js" type="module" defer></script>
-
+<script src="./vendor-BP9wXJlQ.js"></script>
+    <script src="./main-BcWqBHbl.js"></script>
     <link rel="stylesheet" href="src/output.css">
     <meta name="description" content="Modern Matchmaking Platform - Find your perfect match">
     <style>
